corrected my button click to shuffle and the images layout (4col / 3row). still having trouble fixing the wrapper layout, hero, navbar, and img-wrapper are overlapping.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
-.App {
+/* .App {
   display: flex;
   flex-direction: column;
   text-align: center;
+  background-color: darkcyan;
+} */
+
+.card {
+  flex: 4;
+}
+
+.img-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
