--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,4 +4,5 @@
   justify-content: space-between;
   padding: 0px 10px 0px 10px;
   background-color: lightseagreen;
+  z-index: 10;
 }
