--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,12 +1,6 @@
 .wrapper {
-  padding-top: 50px;
   background: palevioletred;
-  height: 100%;
   display: flex;
-  flex-flow: row wrap;
   flex-direction: column;
-  padding: 20px;
-  justify-content: space-around;
   align-content: flex-start;
-  overflow: auto;
 }
